  - Minor fix to {cms_filepicker} plugin.
  - Improve the CmsModuleInfo class such that if the module class file is newer it will be loaded.
  - Now generate the moduleinfo.ini file automatically on intall or upgrade of a module.
  - Increase the maxlength attribute for password input boxes in myaccount.
  - Adds a StartsWith javascript shiv for IE11.

CmsJobManager v0.1.1
  - Optimization of audit logging.
  - Change connection timeout to 1 second.
  - Change processing to be a little more friendly to some environments wrt. content-size header.

MicroTiny v2.2.1
  - Minor fix for filepicker plugin.

News v2.51.3
  - For security, No longer urldecode the detailtemplate param in detail view.
    This may have some implications for people that are specifying the detailtemplate parameter (with a template with special characters) from within a WYSIWYG
    (which is not recommended behavior).

ModuleManager v2.1.2
  - Now sort modules in the installed tab a bit better.
  - Now handle module 'not available' a bit better.

FileManager v1.6.4
  - Add a different icon for navigating up one level.
  - No longer allow uploading any php (or derivative) file
  - No longer allow renaming any file to have a .php extension (or a derivative)

FilePicker v1.0.1
  - No longer allow overriding the filepicker type on the URL
  - No longer allow uploading any .php files

Version 2.2.2 - Hearts Content
----------------------------------
Core - General
 - Additional security improvement in CMSModule::GetTemplateResource().
 - Now Smarty_CMS is no longer derived from SmartyBC (uses our own wrapper class) which prevents all occurrences of {php} tags from running.
 - Adds an admin directory .htaccess file to explicitly disable browser caching of any resources.
 - Fixes a relative path vulnerability in module_file_tpl resource.
 - Fixes a path building issue in CmsModuleInfo.
 - Fixes to parsing and generating moduleinfo.ini files.
 - Disallow any resource specifications with a * or a /.