@@ -152,7 +152,6 @@ final class cms_config implements ArrayAccess
     $this->_types['assets_dir'] = self::TYPE_STRING;
     $this->_types['assets_path'] = self::TYPE_STRING;
     $this->_types['permissive_smarty'] = self::TYPE_BOOL;
-    $this->_types['smart_urls'] = self::TYPE_BOOL;
     $this->_types['startup_mact_processing'] = self::TYPE_BOOL;
 
     $config = array();
@@ -350,7 +349,6 @@ final class cms_config implements ArrayAccess
       case 'persist_db_conn':
 		  return false;
 
-      case 'smart_urls':
 	  case 'set_names':
       case 'startup_mact_processing':
 		  return true;
@@ -384,18 +382,15 @@ final class cms_config implements ArrayAccess
 		  }
 		  $prefix = 'http://';
 		  if( CmsApp::get_instance()->is_https_request() ) $prefix = 'https://';
-          if( $this->offsetGet('smart_urls') ) $prefix = '//';
 		  $str = $prefix.$_SERVER['HTTP_HOST'].$path;
 		  $this->_cache[$key] = $str;
 		  return $str;
 
 	  case 'ssl_url':
           // deprecated
-          if( $this->offsetGet('smart_urls') ) {
-              $this->_cache[$key] = $this->offsetGet('root_url');
-          } else {
-              $this->_cache[$key] = str_replace('http://','https://',$this->offsetGet('root_url'));
-          }
+          $tmp = $this->offsetGet('root_url');
+          if( startswith($tmp,'http://' ) ) $tmp = str_replace('http://','https://',$tmp);
+          $this->_cache[$key] = $tmp;
 		  return $this->_cache[$key];
 
 	  case 'uploads_path':
@@ -408,11 +403,9 @@ final class cms_config implements ArrayAccess
 
 	  case 'ssl_uploads_url':
           // deprecated
-          if( $this->offsetGet('smart_urls') ) {
-              $this->_cache[$key] = $this->offsetGet('uploads_url');
-          } else {
-              $this->_cache[$key] = $this->offsetGet('ssl_url').'/uploads';
-          }
+          $tmp = $this->offsetGet('uploads_url');
+          if( startswith($tmp,'http://' ) ) $tmp = str_replace('http://','https://',$tmp);
+          $this->_cache[$key] = $tmp;
 		  return $this->_cache[$key];
 
 	  case 'image_uploads_path':
@@ -424,11 +417,9 @@ final class cms_config implements ArrayAccess
 		  return $this->_cache[$key];
 
 	  case 'ssl_image_uploads_url':
-          if( $this->offsetGet('smart_urls') ) {
-              $this->_cache[$key] = $this->offsetGet('uploads_url').'/images';
-          } else {
-              $this->_cache[$key] = $this->offsetGet('ssl_uploads_url').'/images';
-          }
+          $tmp = $this->offsetGet('image_uploads_url');
+          if( startswith($tmp,'http://' ) ) $tmp = str_replace('http://','https://',$tmp);
+          $this->_cache[$key] = $tmp;
 		  return $this->_cache[$key];
 
 	  case 'previews_path':
@@ -603,7 +594,6 @@ final class cms_config implements ArrayAccess
    */
   public function smart_root_url()
   {
-      if( $this->offsetGet('smart_urls') ) return $this->offsetGet('root_url');
 	  if( CmsApp::get_instance()->is_https_request() ) return $this->offsetGet('ssl_url');
 	  return $this->offsetGet('root_url');
   }
@@ -616,7 +606,6 @@ final class cms_config implements ArrayAccess
    */
   public function smart_uploads_url()
   {
-      if( $this->offsetGet('smart_urls') ) return $this->offsetGet('uploads_url');
 	  if(CmsApp::get_instance()->is_https_request() ) return $this->offsetGet('ssl_uploads_url');
 	  return $this->offsetGet('uploads_url');
   }
@@ -629,7 +618,6 @@ final class cms_config implements ArrayAccess
    */
   public function smart_image_uploads_url()
   {
-      if( $this->offsetGet('smart_urls') ) return $this->offsetGet('image_uploads_url');
 	  if(CmsApp::get_instance()->is_https_request() ) return $this->offsetGet('ssl_image_uploads_url');
 	  return $this->offsetGet('image_uploads_url');
   }
